asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__stash__stash.snap
---
source: asyncgit/src/lib/tui/git/tests/stash.rs
assertion_line: 23
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: test                                                          |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git stash push --include-untracked --message test                             |
Saved working directory and index state On main: test                           |
styles_hash: a21f2b277eae9406
