asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__stash__stash_apply.snap
---
source: asyncgit/src/lib/tui/git/tests/stash.rs
assertion_line: 111
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Staged changes (1)                                                             |
 added      file-one                                                            |
 @@ -0,0 +1 @@                                                                  |
 +blahonga                                                                      |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: file-two                                                      |
 stash@1 On main: file-one                                                      |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git stash apply -q 1                                                          |
styles_hash: 5f6c840650f2861
