asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__stash__stash_apply_prompt.snap
---
source: asyncgit/src/lib/tui/git/tests/stash.rs
assertion_line: 106
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: file-two                                                      |
 stash@1 On main: file-one                                                      |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Apply stash (default 0): ›                                                    |
styles_hash: 3e6073d833eb8d18
