asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__stash__stash_menu.snap
---
source: asyncgit/src/lib/tui/git/tests/stash.rs
assertion_line: 13
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Untracked files                                                                |
 file-two                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 added      file-one…                                                           |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Stash                   Arguments                                               |
z both                  -a Also save untracked and ignored files (--all)        |
a apply                 -u Also save untracked files (--include-untracked)      |
i index                                                                         |
w worktree                                                                      |
x keeping index                                                                 |
p pop                                                                           |
k drop                                                                          |
q Quit/Close                                                                    |
<esc> Close screen                                                              |
styles_hash: 64cfdd07722af940
